# sample-deep-insight

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
deep-insight-web/: DATA_QA.md  Dockerfile  README.md  app.py  chat_agent.py  deploy-cloudfront.sh  deploy.sh  requirements.txt
deep-insight-web/sample_reports/: 260218_en_moon_market_final_report_with_citations.docx  260218_kr_moon_market_final_report_with_citation.docx
deep-insight-web/static/: index.html
deep-insight-web/static/css/: styles.css
deep-insight-web/static/js/: analyze.js  app.js  chat.js  i18n.js  upload.js
docs/features/data-validation/: citation-coverage-research.md  citation-validation-explained.md  files-changed.md
managed-agentcore/: .env.example  01_create_agentcore_runtime_vpc.py  02_invoke_agentcore_runtime_vpc.py  agentcore_runtime.py  requirements.txt
managed-agentcore/downloaded_artifacts/: all_results.txt  calculation_metadata.json  citations.json  final_report.docx  final_report_with_citations.docx  report_draft.docx  token_usage.json  token_usage.txt  validation_report.txt
managed-agentcore/fargate-runtime/: Dockerfile  code_executor_server.py  requirements.txt
managed-agentcore/production_deployment/scripts/phase3/: 01_extract_env_vars_from_cf.sh  pyproject.toml
self-hosted/: .env.example  .gitignore  README.md  main.py
self-hosted/infra/: app.py  cdk.json  setup_cloudwatch.sh  user_data.sh
self-hosted/setup/: pyproject.toml  test_korean_font.py
self-hosted/web/: __main__.py  app.py  event_adapter.py  hitl.py
tests/: dependency_regression_test.sh
(+44 files in other folders)
