[project]
name = "deep-insight-runtime"
version = "0.1.0"
description = "Deep Insight AgentCore Runtime Scripts"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.1",
    "strands-agents>=1.18.0",
    "bedrock-agentcore>=1.1.1",
    "bedrock-agentcore-starter-toolkit>=0.2.2",
    "python-dotenv==1.2.2",
    "pyyaml>=6.0",
    "termcolor==3.2.0",
    "aws-opentelemetry-distro==0.12.0",
    # 'jupyter' meta-package removed (mirrors #89 for self-hosted); only
    # ipykernel is needed — IPython.display is satisfied via ipykernel's
    # IPython dep, and code execution uses subprocess, not jupyter kernels.
    "ipykernel>=7.1.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "fastmcp>=2.10.0",
]
